--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -67,7 +67,7 @@ window#waybar {
   border-radius: 15px;
   border: 0px;
   color: @textcolor1;
-  background-color: transparent;
+  background-color: @backgroundlight;
   transition: all 0.3s ease-in-out;
   opacity: 0.4;
 }
@@ -78,7 +78,7 @@ window#waybar {
   border-radius: 15px;
   min-width: 40px;
   transition: all 0.3s ease-in-out;
-  opacity: 1;
+  opacity: 0.4;
 }
 
 #workspaces button:hover {
@@ -282,7 +282,7 @@ window#waybar.empty #window {
   padding: 0px 10px 0px 10px;
   margin: 8px 16px 8px 0px;
   opacity: 0.8;
-  border: 3px solid @bordercolor;
+  border: 1px solid @bordercolor;
 }
 
 /* -----------------------------------------------------
@@ -355,7 +355,7 @@ window#waybar.empty #window {
   padding: 1px 10px 0px 10px;
   margin: 8px 15px 8px 0px;
   opacity: 0.8;
-  border: 3px solid @bordercolor;
+  border: 1px solid @bordercolor;
 }
 
 /* -----------------------------------------------------
@@ -377,9 +377,9 @@ window#waybar.empty #window {
 * ----------------------------------------------------- */
 
 #pulseaudio {
-  background-color: white;
+  background-color: @backgroundlight;
   font-size: 16px;
-  color: black;
+  color: @textcolor1;
   border-radius: 15px;
   padding: 2px 10px 0px 10px;
   margin: 8px 15px 8px 0px;
