--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -130,12 +130,12 @@ window#waybar.empty #window {
 #taskbar {
   background: @backgroundlight;
   margin: 6px 15px 6px 0px;
-  padding: 0px;
+  padding: 3px;
   border-radius: 15px;
   font-weight: normal;
   font-style: normal;
   opacity: 0.8;
-  border: 3px solid @backgroundlight;
+  border: 1px solid @backgrounddark;
 }
 
 #taskbar button {
